shortened link fix color contrast

--- a/style/_url shortener.scss
+++ b/style/_url shortener.scss
@@ -67,11 +67,11 @@
     .shortened_link {
         padding: .75rem 0;
         width: 90%;
-        color: $cyan;
+        color: #1B8383;
     }
 
     .copy {
-        background: $cyan;
+        background: #1B8383;
         font-family: inherit;
         color: #fff;
         font-weight: 700;
