--- a/style/style.css
+++ b/style/style.css
@@ -286,10 +286,10 @@ img {
 .shortened_link_container .shortened_link {
   padding: 0.75rem 0;
   width: 90%;
-  color: hsl(180deg, 66%, 49%);
+  color: #1B8383;
 }
 .shortened_link_container .copy {
-  background: hsl(180deg, 66%, 49%);
+  background: #1B8383;
   font-family: inherit;
   color: #fff;
   font-weight: 700;
